# python_poetry_piaic

0_first_poetry_project/: pyproject.toml
1_basics/: pyproject.toml
1_basics/1_basics/1_data_types/: 1_basic_data_types.py  2_string_methods.py
1_basics/1_basics/2_operators/: 3_logical_operators.py  4_bitwise_operators.py
1_data_types/1_data_types/: 2_string_methods.py  3_integer_methods.py  4_assignment_operators.py  5_in_and_notin.py
