[tool.poetry]
name = "1-data-types"
version = "0.1.0"
description = ""
authors = ["Huzair Ahmed Khan <huzairahmedkhan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
